--- a/.env.local
+++ b/.env.local
@@ -5,3 +5,8 @@ SPRING_DATASOURCE_USERNAME=smartvaultuser
 SPRING_DATASOURCE_PASSWORD=123456
 JWT_SECRET=your_jwt_secret_here
 JWT_EXPIRATION_MS=3600000
+B2_APPLICATION_KEY_ID=005e686a8791eee0000000002
+B2_APPLICATION_KEY=K005CfhMvbq6YtztKAtiR0/DuXcaNi4
+B2_BUCKET_ID=smartvault
+BACKBLAZE_BUCKET_NAME=smartvault
+BACKBLAZE_ENDPOINT=https://s3.us-east-005.backblazeb2.com/
